# DSV

./: .clang-format  .gitignore  CMDWidget.cpp  CMDWidget.h  CMDWidget.ui  CMakeLists.txt  DSV.desktop  DSV.pro  DataPanel.cpp  DataPanel.h  DataPanel.ui  LICENSE_bundled.txt  LayersManager.cpp  LayersManager.h  LayersManager.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  Setting.cpp  Setting.h
base/: Algorithm.cpp  Algorithm.h  EarCut.h  Editer.cpp  Editer.h  Geometry.cpp  Geometry.h
cmake/: qpdf.cmake
draw/: Canvas.cpp  Canvas.h  Container.cpp  Container.h  GLSL.h  Graph.cpp  Graph.h
examples/: DSV.dxf
inc/: config.h  config.h.in
inc/base/: Algorithm.hpp  Collision.hpp  Editer.hpp  Geometry.hpp  Math.hpp  Memo.hpp  Node.hpp  PhysicalShape.hpp  Physics.hpp  Pretreatment.hpp  Structure.hpp  UndoStack.hpp
inc/draw/: Canvas.hpp  Container.hpp  GLSL.hpp  Graph.hpp
inc/io/: Action.hpp  DSVParser.hpp  DXFReaderWriter.hpp  File.hpp  GUISetting.hpp  GlobalSetting.hpp  PDFParser.hpp  PDFSpirit.hpp  PLT.hpp  PLTParser.hpp  PLTSpirit.hpp  Parser.hpp  RS274DParser.hpp  Rule.hpp  Scanner.hpp  Spirit.hpp  TextEncoding.hpp
inc/io/Parser/: BaseParser.hpp  ParserGen1.hpp  ParserGen2.hpp
inc/simulation/: StructureBuilder.hpp  StructureMover.hpp
inc/ui/: CMDWidget.hpp  DataPanel.hpp  LayersManager.hpp  MainWindow.hpp  MessageBox.hpp  Setting.hpp  TitleBar.hpp  WinUITool.hpp
io/: DSVParser.cpp  DSVParser.h  File.cpp  File.h  GlobalSetting.cpp  GlobalSetting.h  PDFParser.cpp  PDFParser.h  PLTParser.cpp  PLTParser.h  RS274DParser.cpp  RS274DParser.h  TextEncoding.cpp
io/Parser/: Action.h  BaseParser.h  ParserGen2.h
libs/: CMakeLists.txt
libs/Parser/: BaseParser.hpp
libs/clipper2/: clipper.engine.cpp  clipper.offset.cpp  clipper.rectclip.cpp
libs/libdxfrw/: drw_entities.cpp
libs/libdxfrw/intern/: drw_textcodec.cpp  drw_textcodec.h  dxfwriter.cpp
output/: config.json
res/: Icons.qrc  icon.rc
res/fonts/: HZFS.SHX
res/icons/: DSV_logo.drawio  angle_btn.drawio  bezier_btn.drawio  blend_btn.drawio  button_arrow.drawio  chamfer_btn.drawio  cmd_line_btn.drawio  connect_btn.drawio  detach_btn.drawio  difference_btn.drawio  ellipse_btn.drawio  extend_btn.drawio  free_fillet_btn.drawio  intersection_btn.drawio  line_array_btn.drawio  measure_btn.drawio  mirror_btn.drawio  point_mirror_btn.drawio  reverse_btn.drawio  ring_array_btn.drawio  rotate_btn.drawio  save_file_btn.drawio  split_btn.drawio  trim_btn.drawio  union_btn.drawio  xor_btn.drawio
res/icons/arc/: 3p_arc_btn.drawio  sca_arc_btn.drawio  sea_arc_btn.drawio  ser_arc_btn.drawio
res/icons/circle/: 2p_circle_btn.drawio  3p_circle_btn.drawio
res/icons/dark/: flipy_btn.drawio
res/icons/dimension/: aligneddim_btn.drawio  angledim_btn.drawio  arcdim_btn.drawio  diameterdim_btn.drawio  lineardim_btn.drawio  ordinatedim_btn.drawio  radiusdim_btn.drawio
res/icons/divide/: divided_parts_measure_btn.drawio  divided_parts_n_btn.drawio  divided_points_measure_btn.drawio  divided_points_n_btn.drawio
res/icons/ellipse/: ellipse_arc_btn.drawio
res/icons/light/: circle_btn.drawio  close_btn.drawio  combinate_btn.drawio  connect_btn.drawio  curve_btn.drawio  difference_btn.drawio  fillet_btn.drawio  flipx_btn.drawio  flipy_btn.drawio  intersection_btn.drawio  line_array_btn.drawio  measure_btn.drawio  mirror_btn.drawio  offset_btn.drawio  polyline_btn.drawio  rectangle_btn.drawio  ring_array_btn.drawio  rotate_btn.drawio  scale_btn.drawio  split_btn.drawio  union_btn.drawio
res/icons/polygon/: point_btn.drawio  polygon_circumscribed_btn.drawio  polygon_inscribed_btn.drawio
res/styles/: dark.qss  light.qss
resource/: Icons.qrc
resource/icons/: circle_btn.drawio  combinate_btn.drawio  data_btn.drawio  offset_btn.drawio  rectangle_btn.drawio  settings_btn.drawio
src/: .clang-format  .clang-tidy  CMakeLists.txt  main.cpp
src/base/: AABB.cpp  Algorithm.cpp  Algorithm.h  Algorithm.hpp  Collision.cpp  Collision.h  Collision.hpp  Container.cpp  Container.hpp  Dimension.cpp  Dimension.hpp  Editer.cpp  Editer.h  Editer.hpp  Editor.cpp  Editor.hpp  Geometry.cpp  Geometry.h  Geometry.hpp  Graph.cpp  Graph.hpp  Math.cpp  Math.hpp  Memo.cpp  Physics.cpp  Pretreatment.cpp  Structure.cpp  UndoStack.cpp  UndoStack.h  UndoStack.hpp
src/draw/: Canvas.cpp  Canvas.h  Canvas.hpp  CanvasMenu.cpp  CanvasMenu.hpp  CanvasOperation.cpp  CanvasOperation.hpp  Container.cpp  Container.h  GLSL.h  GLSL.hpp  Graph.cpp  Graph.h  QuadTree.cpp  QuadTree.hpp
src/io/: DSVParser.cpp  DSVParser.h  DSVParser.hpp  DSVReaderWriter.cpp  DSVReaderWriter.hpp  DXFReaderWriter.cpp  DXFReaderWriter.hpp  File.cpp  File.h  File.hpp  GlobalSetting.cpp  GlobalSetting.h  GlobalSetting.hpp  PDFParser.cpp  PDFSpirit.cpp  PLT.cpp  PLTParser.cpp  PLTParser.h  PLTParser.hpp  PLTSpirit.cpp  RS274DParser.cpp  RS274DParser.h  RS274DParser.hpp  SHXReader.cpp  SHXReader.hpp  Scanner.cpp  TextEncoding.cpp  TextEncoding.h  TextEncoding.hpp
src/io/Parser/: LICENSE  (+2 more)
src/resource/: Icons.qrc
src/simulation/: SructureBuilder.cpp  StructureMover.cpp
src/ui/: ActionGroup.cpp  ActionGroup.hpp  CMDWidget.cpp  CMDWidget.h  CMDWidget.hpp  CMDWidget.ui  DataPanel.cpp  DataPanel.h  DataPanel.hpp  DataPanel.ui  LayersManager.cpp  LayersManager.h  LayersManager.hpp  LayersManager.ui  LayersManagerDialog.qml  MainWindow.cpp  MainWindow.h  MainWindow.hpp  MainWindow.qml  MainWindow.ui  MessageBox.cpp  MessageBox.hpp  MessageBox.ui  PropertyWidget.cpp  PropertyWidget.hpp  PropertyWidget.ui  Setting.cpp  Setting.h  Setting.hpp  Setting.ui  TitleBar.cpp  TitleBar.ui  WinUITool.cpp  WinUITool.hpp
(+40 files in other folders)
